# jflux_DiffusionDB

./: pyproject.toml
jflux/: model.py  train.py  util.py
